
   * Now uses absolute imports and no longer adds plugin directory to the system path.

   * Basic support for stacked branches.

   * Avoid reopening connections to branch and repository when finding branches. (#243749)

  FEATURES
  
   * Add new "dpush" command that works similar to git-svn's dcommit.

   * Support proper Bazaar tags. (#81102)

  BUG FIXES

   * More efficient use of mutter.

   * Remember parent branch correctly during sprout. (#237174)

   * Raise appropriate errors when using annotate.

   * Fix compatibility with Bazaar 1.6.

   * Fix case insensitive handling of paths in 
     CachingLogWalker.find_latest_change(). (#233964)

   * Fix compatibility with newer versions of Subversion. (#229419)

   * Deal with parent branch changing name in Repository.iter_changes().
     (#229410)

   * Fix ability to use bzr-svn with disabling cache.

   * Fix use of unicode characters in filenames in working trees.

   * Fix use of unicode characters in filenames when committing. (#230090)

   * Fix modifying branching scheme from the command-line. (#230529)

   * Cope with kind changes better. (#191576)

   * Fix dealing with strange remove during replace operation. (#232196)

   * Deal with missing branches/tags directories when using webdav. (#235301)

   * Remove endless loop in logwalker. (#235776)

   * Convert redirect requests received from Subversion. (#229848)

   * New function for finding path children that's faster and more correct. (#240954)

   * Support cloning bzr-svn branches (will clone to rich-root-pack). (#229819)

   * Fix inconsistent revision iteration when branches' parents were moved but 
     not changed. (#237901)

bzr-svn 0.4.10  2008-05-12

  CHANGES

   * Changed license from GPLv2 or later to GPLv3 or later.

  FEATURES

   * Add new ``log-strip-trailing-newline'' option which removes 
     the last trailing newline from the log message when pushing 
     to Subversion. This feature is only available for the 